continuação modulo rag openai

--- a/5.rag_openai.ipynb
+++ b/5.rag_openai.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e6e657df-bfdb-42a1-a4bb-68bd628e2c59",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "3d6abfab-1163-4d2b-a42b-91a162a75e5e",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "0e524f64-be78-4bba-8ffd-2ba669559d17",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,8 @@
     "                 \"image_url\": {\"url\": f\"data:image/jpeg;base64,{image}\",\n",
     "                               \"detail\": \"high\"}}\n",
     "            ]}\n",
-    "        ]\n",
+    "        ],\n",
+    "        temperature=0\n",
     "    )\n",
     "    return response.choices[0].message.content"
    ]
@@ -224,11 +225,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f4ab6e06-d6f0-450d-89f6-ca1d49326c27",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_gpt_response(client, system_prompt, imagem):\n",
+    "    response = generate(client, system_prompt, imagem)\n",
+    "    return [response, display(Markdown(response))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c84b594b-54a0-47f4-8b38-f8ed128432d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Melhorando o system prompt\n",
+    "system_prompt = \"\"\"\n",
+    "Analyse the content of this image and extract any related recipe information into structure components.\n",
+    "Specifically, extract the recipe title, list of ingredients, step by step instructions, cousine type, dish type, any relevant tags or metadata.\n",
+    "The output must be in a way suited for embedding in a Retrieval Augmented Generation (RAG) system.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ad8e12b5-4665-475d-916f-0fef41e57126",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Here’s the structured recipe information extracted from the image:\n",
+       "\n",
+       "### Recipe Title\n",
+       "Chicken Gumbo\n",
+       "\n",
+       "### Cuisine Type\n",
+       "Southern\n",
+       "\n",
+       "### Dish Type\n",
+       "Soup\n",
+       "\n",
+       "### Ingredients\n",
+       "- 1 small stewing chicken\n",
+       "- 2 tablespoons flour, melted\n",
+       "- 3 tablespoons butter\n",
+       "- 1 onion, chopped\n",
+       "- 4 cups okra, sliced and chopped\n",
+       "- 2 cups tomato pulp\n",
+       "- Few sprigs parsley, chopped\n",
+       "- Salt and pepper to taste\n",
+       "- 4 cups water\n",
+       "\n",
+       "### Instructions\n",
+       "1. Clean and dress the chicken, cutting it into serving portions.\n",
+       "2. Dredge the chicken lightly with flour and sauté in melted butter along with the chopped onion.\n",
+       "3. Once the chicken is nicely browned, add the okra, tomatoes, parsley, and water.\n",
+       "4. Season to taste with salt and pepper.\n",
+       "5. Cook slowly until the chicken is tender and the okra is well-cooked (about 2½ hours).\n",
+       "6. If a thinner soup is preferred, increase the quantity of water as needed.\n",
+       "\n",
+       "### Relevant Tags\n",
+       "- Comfort Food\n",
+       "- Hearty\n",
+       "- Traditional\n",
+       "- Southern Cuisine\n",
+       "\n",
+       "This format is suitable for embedding in a Retrieval Augmented Generation (RAG) system."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Teste\n",
+    "resposta = get_gpt_response(client, system_prompt, image_data)\n",
+    "resposta[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b55847f-1dcd-4553-81ef-e1fe7f5b8784",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### Precisa Melhorar\n",
+    "No resultado, não foi mostrada todas as receitas da imagem. É preciso ir testando os prompts e parâmetros.\n",
+    "<img src=\"5.rag_openai/img/Southern%20Cookbook%20of%20Fine%20Recipes_pg9.jpg\" width=\"700\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35e34448-0be9-41e9-90f6-ee58272c94e5",
+   "metadata": {},
+   "source": [
+    "Devido custo e tempo, vamos continuar com o que temos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9271fd3f-7e4f-43c3-8af6-d382e5503579",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def converter_imagens_b64(imagens_path):\n",
+    "    imagens_b64 = []\n",
+    "    for imagem_path in imagens_path:\n",
+    "        with open(imagem_path, \"rb\") as arquivo_imagem:\n",
+    "            imagens_b64.append(base64.b64encode(arquivo_imagem.read()).decode('utf-8'))\n",
+    "    return imagens_b64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "bd65af0e-f094-4713-a800-477a3b1704c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gerar_respostas(client, system_prompt, lista_imagens_b64):\n",
+    "    respostas = []\n",
+    "    for image_data in lista_imagens_b64:\n",
+    "        respostas.append(generate(client, system_prompt, image_data))\n",
+    "    return respostas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "573bb056-a0ec-4674-86c5-2e796484867b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def converter_gerar_tudo(client, system_prompt, imagens_path):\n",
+    "    imagens_b64 = converter_imagens_b64(imagens_path)\n",
+    "    responses = gerar_respostas(client, system_prompt, imagens_b64)\n",
+    "    output = []\n",
+    "    for i, imagem_path in enumerate(imagens_path):\n",
+    "        output.append(\n",
+    "            {\"imagem_path\": imagem_path, \"conteudo\": responses[i]}\n",
+    "        )\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1c014df7-0d23-4df1-af0e-4065b32ed777",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filtrar_receitas(receitas):\n",
+    "    receitas_filtradas = []\n",
+    "    for receita in receitas:\n",
+    "        if any(keyword in receita[\"conteudo\"].lower() for keyword in [\"ingredients\", \"instructions\", \"recipe title\"]):\n",
+    "            receitas_filtradas.append(receita)\n",
+    "        else:\n",
+    "            print(f\"Ignorando receita: {receita[\"imagem_path\"]}\")\n",
+    "    return receitas_filtradas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8feab42e-b65e-4bbf-9dac-0c174fdb766b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(converter_imagens_b64(image_paths))"
+   ]
   }
  ],
  "metadata": {
